--- a/homeworks/homework_01.ipynb
+++ b/homeworks/homework_01.ipynb
@@ -15,7 +15,12 @@
     "\n",
     "Let $Y$ be a random variable taking values in $\\{1,...,N\\}$ and suppose that any value is equally likely, i.e. that $P(Y=j)=\\frac{1}{N}$. \n",
     "\n",
-    "Knowing that $\\sum_{j=1}^N j = \\frac{N(N+1)}{2}$, show that $\\mathbb{E}(Y)=\\frac{N+1}{2}$."
+    "Knowing that $\\sum_{j=1}^N j = \\frac{N(N+1)}{2}$, show that $\\mathbb{E}(Y)=\\frac{N+1}{2}$.\n",
+    "\n",
+    "### Solution\n",
+    "We simply apply the definition of expected value and work through the summation:\n",
+    "\n",
+    "$$ \\mathbb{E}(Y) = \\sum_{i=1}^N \\frac{i}{N} = \\frac{1}{N} \\sum_{i=1}^N i = \\frac{1}{N} \\, \\frac{N(N+1)}{2} = \\frac{N+1}{2}. $$"
    ]
   },
   {
@@ -23,7 +28,39 @@
    "metadata": {},
    "source": [
     "### Exercise 2\n",
-    "Prove that $\\mathbb{E}(X)=\\mu$ for $X\\sim\\mathcal{N}(\\mu,\\sigma^2)$."
+    "Prove that $\\mathbb{E}(X)=\\mu$ for $X\\sim\\mathcal{N}(\\mu,\\sigma^2)$.\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "By applying the definition of expected value on $\\mathcal{N}(\\mu,\\sigma^2)$\n",
+    "\n",
+    "$$\\mathbb{E}(X)= \\int \\frac{x}{\\sqrt{2\\pi\\sigma^2}} e^{-\\left(\\frac{x-\\mu}{\\sqrt{2\\sigma^2}}\\right)^2}\\,dx\\ =\\ \\frac{1}{\\sqrt{\\pi}} \\int x e^{-\\left(\\frac{x-\\mu}{\\sqrt{2\\sigma^2}}\\right)^2}\\,\\frac{dx}{\\sqrt{2\\sigma^2}}$$\n",
+    "\n",
+    "we substitute\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "z &= \\frac{x-\\mu}{\\sqrt{2\\sigma^2}} \\Rightarrow x = z \\sqrt{2\\sigma^2} + \\mu \\\\\n",
+    "dz &= \\frac{dx}{\\sqrt{2\\sigma^2}}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "thus obtaining\n",
+    "\n",
+    "$$\\frac{1}{\\sqrt{\\pi}} \\int (z \\sqrt{2\\sigma^2} + \\mu) e^{-z^2}\\,dz\\ =\\ \\frac{1}{\\sqrt{\\pi}} \\left( \\sqrt{2\\sigma^2} \\int z e^{-z^2}\\,dz\\ + \\mu \\int e^{-z^2}\\,dz\\, \\right);$$\n",
+    "\n",
+    "the first addend may be solved as follows:\n",
+    "\n",
+    "$$\\int_{-\\infty}^\\infty z e^{-z^2}\\,dz\\ = \\lim_n \\int_{-n}^n z e^{-z^2}\\,dz\\ = \\lim_n \\left[ -\\frac{1}{2}e^{-z^2}\\right]_{-n}^n = \\lim_n -\\frac{1}{2}e^{-n^2} + -\\frac{1}{2}e^{-(-n)^2} = 0,$$\n",
+    "\n",
+    "while the second notoriously results in\n",
+    "\n",
+    "$$\\int_{-\\infty}^\\infty e^{-z^2}\\,dz\\ = \\sqrt{\\pi}$$\n",
+    "\n",
+    "(the explicit demonstration consists in evaluating the square of the integral by applying polar coordinates substitution).\n",
+    "\n",
+    "Combining these results we obtain\n",
+    "\n",
+    "$$\\mathbb{E}(X) = \\frac{1}{\\sqrt{\\pi}} ( \\sqrt{2\\sigma^2} \\cdot 0 + \\mu \\cdot \\sqrt{\\pi}) = \\mu.$$\n"
    ]
   },
   {
@@ -40,7 +77,24 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "Are $X$ and $Y$ independent?"
+    "Are $X$ and $Y$ independent?\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "Two RV $x,y$ are independent iff for all possible values they may assume the following decomposition holds:\n",
+    "\n",
+    "$$p(x,y) = p(x)p(y).$$\n",
+    "\n",
+    "We can easily demonstrate this is not the case by explicitly computing LHS and RHS for $x=y=0$:\n",
+    "\n",
+    "$$p(0,0) = 0$$\n",
+    "while\n",
+    "$$p(x=0) = \\sum_{i=0}^3 p(x=0|y=i) = \\frac{0}{30} + \\frac{1}{30} +\\frac{2}{30} +\\frac{3}{30} = \\frac{1}{5}$$\n",
+    "$$p(y=0) = \\sum_{i=0}^2 p(y=0|x=i) = \\frac{0}{30} + \\frac{1}{30} +\\frac{2}{30} = \\frac{1}{10}$$\n",
+    "hence\n",
+    "$$p(0,0) = 0 \\neq p(x=0) \\cdot p(y=0) = \\frac{1}{50}.$$\n",
+    "\n",
+    "We may thus conclude that $x$ and $y$ are **not independent**.\n"
    ]
   },
   {
@@ -59,9 +113,17 @@
     "\\end{cases}\n",
     "$$\n",
     "\n",
-    "Find\n",
-    "1. the marginal density of Y;\n",
-    "2. the conditional density of $X$ given $Y=1/2$.\n"
+    "Find  \n",
+    "1. the marginal density of Y;  \n",
+    "2. the conditional density of $X$ given $Y=1/2$.\n",
+    "\n",
+    "### Solution\n",
+    "The marginal density of Y is:\n",
+    "$$p(Y) = \\int_X p(X,Y)\\ dx = \\int_0^{1-y} 24xy\\ dx\\ = 12y (1 - y)^2.$$\n",
+    "\n",
+    "Analogously $p(X) = 12x(1-x)^2$, therefore we may compute\n",
+    "\n",
+    "$$p(X=\\frac{1}{2}) = 12 \\cdot \\frac{1}{2} \\left(1 - \\frac{1}{2}\\right)^2 = \\frac{3}{2}.$$"
    ]
   },
   {
@@ -74,7 +136,44 @@
     "\n",
     "$$f(X,Y) = \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}x^{\\alpha_1-1}y^{\\alpha_2-1}(1-x-y)^{\\alpha_3-1}.$$ \n",
     "\n",
-    "Suppose that $0<x<1,0<y<1,x+y<1$ and prove that the marginal distribution of $X$ is a $\\text{Beta}(\\alpha_1,\\alpha_2+\\alpha_3)$."
+    "Suppose that $0<x<1,0<y<1,x+y<1$ and prove that the marginal distribution of $X$ is a $\\text{Beta}(\\alpha_1,\\alpha_2+\\alpha_3)$.\n",
+    "\n",
+    "### Solution\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "p(X) &= \\int_0^{1-x} \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}x^{\\alpha_1-1}y^{\\alpha_2-1}(1-x-y)^{\\alpha_3-1}\\ dy \\\\\n",
+    "&= \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}x^{\\alpha_1-1} \\int_0^{1-x} y^{\\alpha_2-1}(1-x-y)^{\\alpha_3-1}\\ dy\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "We then perform the substitution\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "z &= \\frac{y}{1-x} \\Rightarrow\\ y = z(1-x)\\\\\n",
+    "dz &= \\frac{dy}{1-x}\\\\\n",
+    "[0,1-x] & \\rightarrow [0,1]\n",
+    "\\end{align}\n",
+    "$$\n",
+    "thus obtaining\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "p(X) &= \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}x^{\\alpha_1-1} \\int_0^1 z^{\\alpha_2-1}(1-x)^{\\alpha_2-1}(1-x-z(1-x))^{\\alpha_3-1}\\ (1-x)dz \\\\\n",
+    "&= \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}x^{\\alpha_1-1}(1-x)^{\\alpha_2+\\alpha_3-1} \\int_0^1 z^{\\alpha_2-1}(1-z)^{\\alpha_3-1}\\ dz\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Notice that the argument of the last integral is a legit $\\text{Beta}_{\\alpha_2,\\alpha_3}(z)$ distribution ($z \\in [0,1]$), scaled by its normalizing factor $B(\\alpha_2,\\alpha_3)$, therefore the integral evaluates to $B(\\alpha_2,\\alpha_3)$, thus we obtain:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "p(X) &= \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}x^{\\alpha_1-1} \\frac{\\Gamma(\\alpha_2)\\Gamma(\\alpha_3)}{\\Gamma(\\alpha_2+\\alpha_3)} \\\\\n",
+    "&= \\frac{\\Gamma(\\alpha_1+\\alpha_2+\\alpha_3)}{\\Gamma(\\alpha_1)\\Gamma(\\alpha_2+\\alpha_3)}x^{\\alpha_1-1}(1-x)^{\\alpha_2+\\alpha_3-1} \\\\\n",
+    "&= \\frac{x^{\\alpha_1-1}(1-x)^{\\alpha_2+\\alpha_3-1}}{B(\\alpha_1,\\alpha_2+\\alpha_3)} \\\\\n",
+    "&= \\text{Beta}_{\\alpha_1,\\alpha_2+\\alpha_3}(x)\n",
+    "\\end{align}\n",
+    "$$"
    ]
   }
  ],
