hw 5 solved, gp notebooks reviewed

--- a/notebooks/05_gaussian_processes.ipynb
+++ b/notebooks/05_gaussian_processes.ipynb
@@ -18,9 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 20.0.2; however, version 20.1 is available.\n",
+      "You should consider upgrading via the 'C:\\winvenv\\Scripts\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  Downloading scikit_learn-0.22.2.post1-cp37-cp37m-win_amd64.whl (6.5 MB)\n",
+      "Collecting joblib>=0.11\n",
+      "  Downloading joblib-0.14.1-py2.py3-none-any.whl (294 kB)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.11.0 in c:\\winvenv\\lib\\site-packages (from scikit-learn) (1.18.1)\n",
+      "Requirement already satisfied, skipping upgrade: scipy>=0.17.0 in c:\\winvenv\\lib\\site-packages (from scikit-learn) (1.4.1)\n",
+      "Installing collected packages: joblib, scikit-learn\n",
+      "Successfully installed joblib-0.14.1 scikit-learn-0.22.2.post1\n"
+     ]
+    }
+   ],
    "source": [
     "# install\n",
     "!pip install -U scikit-learn"
@@ -28,9 +58,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: scikit-learn\n",
+      "Version: 0.22.2.post1\n",
+      "Summary: A set of python modules for machine learning and data mining\n",
+      "Home-page: http://scikit-learn.org\n",
+      "Author: None\n",
+      "Author-email: None\n",
+      "License: new BSD\n",
+      "Location: c:\\winvenv\\lib\\site-packages\n",
+      "Requires: joblib, numpy, scipy\n",
+      "Required-by: \n"
+     ]
+    }
+   ],
    "source": [
     "# check the installed version\n",
     "!python -m pip show scikit-learn"
@@ -53,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
